# Bookstore

./: Dockerfile  docker-compose.yml  env.dev  pyproject.toml  render.yaml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py  views.py
order/migrations/: 0001_initial.py  0002_alter_order_options.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_models.py  test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  views.py
product/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category_viewset.py  test_models.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
